# env_gen

./: .gitignore  CMakeLists.txt  README.md  env_gen.filtergraph  env_gen.jucer  env_gen_test.RPP  env_gen_test.RPP-bak  open_env_gen_test.ps1  open_env_gen_test.sh
Source/: EnvelopeOverlayMac.h  EnvelopeOverlayMac.mm  PluginEditor.cpp  PluginEditor.h  PluginEditorWeb.cpp  PluginEditorWeb.h  PluginProcessor.cpp  PluginProcessor.h  ScopeDataSink.h
Source/Components/: EnvelopeLane.cpp  EnvelopeLane.h  OscilloscopeComponent.cpp  OscilloscopeComponent.h  StepButton.cpp  StepButton.h  WaveformDisplay.cpp  WaveformDisplay.h  customLookAndFeel.cpp  customLookAndFeel.h
Source/DSP/: Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  StepSequencer.cpp  StepSequencer.h
gui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
gui/src/: App.tsx  index.css
gui/src/components/ui/: button.tsx  card.tsx  select.tsx  slider.tsx
gui/src/lib/: bridge.ts  params.ts  sections.ts
